--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,26 +1,26 @@
 #-------------------------------
 # General Site Settings
-title: Zolan
+title: Uoc Nguyen
 logo: logo.svg # You can add own logo.
-description: Zolan is modern minimal theme for Jekyll
+description:  Uoc Nguyen is Frontend, UI/UX Designer 
 
 
 #-------------------------------
 # Author Settings
 author:
-  name: Alex Rodriguez
+  name: Uoc Nguyen
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
+  say-hello: Hello, I’m <strong>Uoc Nguyen</strong>
   bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
 
 
 #-------------------------------
 # Contact links
-twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
-pinterest: https://pinterest.com/ # Add your Pinterest handle
+twitter: https://twitter.com/nguyenvanuoc # Add your Twitter handle
+facebook: https://facebook.com/nguyenvanuoc # Add your Facebook handle
+dribbble: https://dribbble.com/nguyenvanuoc # Add your Dribbble handle
+instagram: https://instagram.com/nguyenvanuoc # Add your Instagram handle
+pinterest: https://pinterest.com/nguyenvanuoc # Add your Pinterest handle
 
 
 #-------------------------------
