--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: Uoc Nguyen
-logo: logo.svg # You can add own logo.
+#logo: logo.svg # You can add own logo.
 description:  Uoc Nguyen is Frontend, UI/UX Designer 
 
 
